# Ezra

./: CMakeLists.txt  README.md
include/programLayer/: Interpreter.h  SubWindows.h  TextEditor.h  ThemeManager.h  Translator.h  Window.h
resources/: pascalIDE.desktop
resources/Lang/: de_de.txt  en_en.txt
resources/Layouts/: default.ini
src/platform/: Main.cpp
src/programLayer/: Interpreter.cpp  SubWindows.cpp  TextEditor.cpp  TextureLoader.cpp  Window.cpp
